--- a/scores.html
+++ b/scores.html
@@ -373,7 +373,7 @@
             try {
                 // Essayer de charger depuis une API locale d'abord
                 try {
-                    const response = await fetch('/api/scores?limit=500');  // Demander 500 scores max
+                    const response = await fetch('https://thouvrun-production.up.railway.app/api/scores?limit=500');  // Demander 500 scores max
                     if (response.ok) {
                         allScores = await response.json();
                         return;
