--- a/web/scores.html
+++ b/web/scores.html
@@ -30,22 +30,25 @@
         body::before {
             content: '';
             position: fixed;
-            top: -50%;
-            left: -50%;
-            width: 200%;
-            height: 200%;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             background-image: url('https://thouvrun-production.up.railway.app/assets/images/weed.png');
             background-repeat: repeat;
             background-size: 100px 100px;
+            background-position: 0 0;
             opacity: 0.5;
             pointer-events: none;
             z-index: 0;
-            animation: weedsDiagonal 8s linear infinite;
+            animation: weedsDiagonal 6s linear infinite;
+            transform: rotate(45deg);
+            transform-origin: center;
         }
 
         @keyframes weedsDiagonal {
-            0% { transform: translate(0, 0) rotate(45deg); }
-            100% { transform: translate(500px, -500px) rotate(45deg); }
+            0% { background-position: 0 0; }
+            100% { background-position: 100px -100px; }
         }
 
         /* Semi-transparent overlay on weeds */
