--- a/web/scores.html
+++ b/web/scores.html
@@ -30,10 +30,11 @@
         body::before {
             content: '';
             position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+            top: 50%;
+            left: 50%;
+            width: 200%;
+            height: 200%;
+            transform: translate(-50%, -50%) rotate(45deg);
             background-image: url('https://thouvrun-production.up.railway.app/assets/images/weed.png');
             background-repeat: repeat;
             background-size: 100px 100px;
