--- a/web/scores.html
+++ b/web/scores.html
@@ -293,28 +293,39 @@
             font-size: 0.8em;
         }
 
-        .points {
-            font-weight: bold;
-            color: #2d5016;
-            font-family: 'Press Start 2P', cursive;
-        }
+
 
         .distance {
             color: #666;
             font-family: 'Press Start 2P', cursive;
             font-size: 0.8em;
+            text-align: center;
         }
 
         .bedos {
             color: #666;
             font-family: 'Press Start 2P', cursive;
             font-size: 0.8em;
+            text-align: center;
         }
 
         .date {
             font-size: 0.8em;
             color: #999;
             font-family: 'Press Start 2P', cursive;
+            text-align: center;
+        }
+
+        .points {
+            text-align: center;
+        }
+
+        .rank {
+            text-align: center;
+        }
+
+        .player-name {
+            text-align: left;
         }
 
         .no-results {
