--- a/web/scores.html
+++ b/web/scores.html
@@ -291,9 +291,15 @@
             color: #2d5016;
             font-family: 'Press Start 2P', cursive;
             font-size: 0.8em;
+            text-align: left;
         }
 
-
+        .points {
+            font-weight: bold;
+            color: #2d5016;
+            font-family: 'Press Start 2P', cursive;
+            text-align: center;
+        }
 
         .distance {
             color: #666;
@@ -316,16 +322,12 @@
             text-align: center;
         }
 
-        .points {
-            text-align: center;
-        }
-
         .rank {
+            font-weight: bold;
+            color: #2d5016;
+            font-size: 1.3em;
+            font-family: 'Press Start 2P', cursive;
             text-align: center;
-        }
-
-        .player-name {
-            text-align: left;
         }
 
         .no-results {
