Center table headers and simplify Terminal.bat launcher

--- a/web/scores.html
+++ b/web/scores.html
@@ -245,6 +245,16 @@
             font-size: 0.85em;
             font-family: 'Press Start 2P', cursive;
             letter-spacing: 1px;
+            text-align: center;
+            align-items: center;
+        }
+        
+        .table-header > div:first-child {
+            text-align: center;
+        }
+        
+        .table-header > div:nth-child(2) {
+            text-align: left;
         }
 
         .table-row {
