--- a/web/scores.html
+++ b/web/scores.html
@@ -602,7 +602,7 @@
                 <div>Joueur</div>
                 <div>Points</div>
                 <div>Distance</div>
-                <div>Bedos</div>
+                <div>Bédos</div>
                 <div>Date</div>
             </div>
             <div id="scoresContainer">
