Fix table layout for scores >1000: widen points column, adjust player name width

--- a/web/scores.html
+++ b/web/scores.html
@@ -236,7 +236,7 @@
             color: white;
             padding: 20px;
             display: grid;
-            grid-template-columns: 80px 1fr 120px 120px 120px 140px;
+            grid-template-columns: 80px 150px 150px 120px 100px 140px;
             gap: 15px;
             font-weight: bold;
             position: sticky;
@@ -260,7 +260,7 @@
         .table-row {
             padding: 20px;
             display: grid;
-            grid-template-columns: 80px 1fr 120px 120px 120px 140px;
+            grid-template-columns: 80px 150px 150px 120px 100px 140px;
             gap: 15px;
             border-bottom: 2px solid #ddd;
             align-items: center;
@@ -425,7 +425,7 @@
 
             .table-header,
             .table-row {
-                grid-template-columns: 50px 1fr 100px 120px 120px 130px;
+                grid-template-columns: 50px 120px 110px 100px 90px 130px;
                 gap: 8px;
                 font-size: 0.75em;
                 padding: 15px;
@@ -499,7 +499,7 @@
 
             .table-header,
             .table-row {
-                grid-template-columns: 40px 1fr 90px 100px 100px 110px;
+                grid-template-columns: 40px 110px 100px 90px 85px 110px;
                 gap: 8px;
                 font-size: 0.65em;
                 padding: 10px;
@@ -534,7 +534,7 @@
 
             .table-header,
             .table-row {
-                grid-template-columns: 35px 1fr 80px 90px 90px 100px;
+                grid-template-columns: 35px 100px 95px 85px 80px 100px;
                 gap: 6px;
                 font-size: 0.6em;
                 padding: 8px;
